feat: Implement core ImednetClient with HTTP methods and error handling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,13 +44,7 @@ testpaths = [
 ]
 
 [tool.black]
-line-length = 88
+line-length = 100
 
-[tool.isort]
-profile = "black"
-
-[tool.mypy]
-python_version = "3.8"
-warn_return_any = true
-warn_unused_configs = true
-ignore_missing_imports = true # Start with this, can tighten later
+[tool.flake8]
+max-line-length = 100
