--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,15 +11,18 @@ repos:
     hooks:
     -   id: black
         language_version: python3.10 # Specify your Python version
+        args: [--line-length=100]
 -   repo: https://github.com/pycqa/isort
     rev: 5.13.2 # Use the version compatible with your project
     hooks:
     -   id: isort
         name: isort (python)
+        args: [--line-length=100]
 -   repo: https://github.com/pycqa/flake8
     rev: 7.1.0 # Use the version compatible with your project
     hooks:
     -   id: flake8
+        args: [--max-line-length=100]
 # -   repo: https://github.com/pre-commit/mirrors-mypy
 #     rev: 'v1.10.0' # Use the version compatible with your project
 #     hooks:
