--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,13 @@ description = "Python SDK for the iMednet REST API"
 authors = [
   { name="Frederick de Ruiter", email="frederick.deruiter@brightresearch.com" }, # Replace with actual details
 ]
-license = { text = "MIT" }
+license = "MIT"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
-    "Development Status :: 3 - Alpha", # Or appropriate status
+    "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Internet :: WWW/HTTP",
@@ -31,10 +30,9 @@ Homepage = "https://github.com/FrederickdeRuiter/imednet-python-sdk" # Replace i
 Issues = "https://github.com/FrederickdeRuiter/imednet-python-sdk/issues" # Replace if needed
 
 [tool.setuptools]
-# If you have specific setuptools configurations, add them here.
-# For example, package discovery:
-# packages = find:
-#   where = ["imednet_sdk"] # Adjust if your source layout is different
+packages = ["imednet_sdk"]
+package-dir = {"" = "."}
+include-package-data = true
 
 [tool.pytest.ini_options]
 minversion = "6.0"
