--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,5 +45,9 @@ testpaths = [
 [tool.black]
 line-length = 100
 
+[tool.isort]
+profile = "black"
+line_length = 100
+
 [tool.flake8]
 max-line-length = 100
