--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest-cov = "^6.1.1"
 responses = "^0.25.7"
 pre-commit = "^4.2.0"
 types-requests = "^2.32.0.20250328"
+isort = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
