--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ license = "MIT"
 python = "^3.10"
 requests = ">=2.32.3,<3.0.0"
 pandas = { version = ">=2.2.3,<3.0.0", optional = true }
+pydantic = "^2.11.3"
 
 [tool.poetry.extras]
 pandas = ["pandas"]
