--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 requests = ">=2.32.3,<3.0.0"
 pandas = { version = ">=2.2.3,<3.0.0", optional = true }
 pydantic = "^2.11.3"
+httpx = "^0.28.1"
 
 [tool.poetry.extras]
 pandas = ["pandas"]
