--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requests = ">=2.32.3,<3.0.0"
 pandas = { version = ">=2.2.3,<3.0.0", optional = true }
 pydantic = "^2.11.3"
 httpx = "^0.28.1"
+tenacity = "^9.1.2"
 
 [tool.poetry.extras]
 pandas = ["pandas"]
