--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,3 +51,6 @@ ignore = ["D", "ANN", "S101"]
 python_version = "3.10"
 strict = false 
 ignore_missing_imports = true
+# ────────────────────────────────────────────────────────────────
+# Ignore all files under imednet/examples/
+exclude                = '^imednet/examples/.*$'
