--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pandas = { version = ">=2.2.3,<3.0.0", optional = true }
 pydantic = "^2.11.3"
 httpx = "^0.28.1"
 tenacity = "^9.1.2"
+python-dotenv = "^1.1.0"
 
 [tool.poetry.extras]
 pandas = ["pandas"]
