fix: correct ruff command in CI workflow to ensure proper linting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           poetry install --with dev
       - name: Lint & Type‑check
         run: |
-          poetry run ruff .
+          poetry run ruff check .
           poetry run black --check .
           poetry run mypy imednet
       - name: Unit tests
