chore: update project references and licensing information to reflect new ownership and proprietary status

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = ""
 authors = ["Frederick de Ruiter <127706008+fderuiter@users.noreply.github.com>"]
 packages = [{ include = "imednet" }]
-license = "MIT"
+license = "Private"
+repository = "https://github.com/Bright-Research/imednet-python-sdk"
+homepage = "https://github.com/Bright-Research/imednet-python-sdk"
 
 [tool.poetry.dependencies]
 python = "^3.10"
