--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ license = "Private"
 repository = "https://github.com/Bright-Research/imednet-python-sdk"
 homepage = "https://github.com/Bright-Research/imednet-python-sdk"
 
+[tool.poetry.scripts]
+imednet = "imednet.cli:app"
+
 [tool.poetry.dependencies]
 python = "^3.10"
 requests = ">=2.32.3,<3.0.0"
@@ -16,6 +19,7 @@ pydantic = "^2.11.3"
 httpx = "^0.28.1"
 tenacity = "^9.1.2"
 python-dotenv = "^1.1.0"
+typer = {extras = ["all"], version = "^0.15.2"}
 
 [tool.poetry.extras]
 pandas = ["pandas"]
