feat: Add example scripts for retrieving studies, sites, subjects, users, variables, and visits using the iMednet SDK

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,9 @@ logs/
 
 # pip wheel metadata
 pip-wheel-metadata/
+
+study_structure_output/
+
+imednet/examples/variables_output
+
+imednet/examples/register_subjects_input
