--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ typer = {extras = ["all"], version = "^0.15.2"}
 pandas = ["pandas"]
 
 [tool.poetry.group.dev.dependencies]
+pandas = ">=2.2.3,<3.0.0"
 black = "^25.1.0"
 ruff = "^0.11.6"
 mypy = "^1.15.0"
