--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ ruff = "^0.11.6"
 mypy = "^1.15.0"
 pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
+pytest-mock = "^3.14.0"
+pytest-asyncio = "^0.23.6"
 responses = "^0.25.7"
 pre-commit = "^4.2.0"
 types-requests = "^2.32.0.20250328"
