--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ homepage = "https://github.com/Bright-Research/imednet-python-sdk"
 
 [tool.poetry.scripts]
 imednet = "imednet.cli:app"
+imednet-web = "imednet.webui:main"
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -26,6 +27,8 @@ httpx = "^0.28.1"
 tenacity = "^9.1.2"
 python-dotenv = "^1.1.0"
 typer = {extras = ["all"], version = "^0.15.2"}
+flask = "^3.0.2"
+cryptography = "^42.0.0"
 
 [tool.poetry.extras]
 pandas = ["pandas"]
