--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,11 +9,11 @@ repos:
     rev: v0.4.2
     hooks:
       - id: ruff
-        args: ["--ignore=E501,F401"]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.10.0
     hooks:
       - id: mypy
         additional_dependencies: ["pandas-stubs", "types-requests"]
-        args: ["--ignore-missing-imports", "--no-strict-optional"]
+        args: ["imednet"]
+        pass_filenames: false
