ci: ensure changelog updated

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,3 +42,7 @@ jobs:
       - name: Unit tests
         run: |
           poetry run pytest -q --cov=imednet --cov-report=xml
+      - name: Check changelog
+        run: |
+          poetry run python scripts/update_changelog.py
+          git diff --quiet --exit-code CHANGELOG.md
