--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ homepage = "https://github.com/Bright-Research/imednet-python-sdk"
 imednet = "imednet.cli:app"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.12,<3.13"
 requests = ">=2.32.3,<3.0.0"
 pandas = { version = ">=2.2.3,<3.0.0", optional = true }
 pydantic = "^2.11.3"
@@ -57,7 +57,7 @@ build-backend = "poetry.core.masonry.api"
 # ------------------------
 [tool.black]
 line-length = 100
-target-version = ["py310"]
+target-version = ["py312"]
 
 [tool.ruff]
 line-length = 100
@@ -68,7 +68,7 @@ select = ["E", "F", "I"]
 ignore = ["D", "ANN", "S101"]
 
 [tool.mypy]
-python_version = "3.10"
+python_version = "3.12"
 strict = false 
 ignore_missing_imports = true
 # ────────────────────────────────────────────────────────────────
