--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,17 +3,16 @@ repos:
     rev: 24.2.0
     hooks:
       - id: black
-        args: ["--line-length=100", "--skip-string-normalization"]
+        args: ["--line-length=100"]
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.4.2
     hooks:
       - id: ruff
-        args: ["--ignore=E501,F401"]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.10.0
     hooks:
       - id: mypy
         additional_dependencies: ["pandas-stubs", "types-requests"]
-        args: ["--ignore-missing-imports", "--no-strict-optional"]
+        args: ["--config-file", "pyproject.toml"]
