--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,8 +66,14 @@ ignore = ["D", "ANN", "S101"]
 
 [tool.mypy]
 python_version = "3.10"
-strict = false 
+strict = false
 ignore_missing_imports = true
 # ────────────────────────────────────────────────────────────────
 # Ignore all files under imednet/examples/
-exclude                = '^imednet/examples/.*$'
+exclude = '^imednet/examples/.*$'
+
+[tool.mypy-imednet.utils]
+strict = true
+
+[tool.mypy-imednet.core]
+strict = true
