--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ ignore = ["D", "ANN", "S101"]
 python_version = "3.10"
 strict = false
 ignore_missing_imports = true
+plugins = ["pydantic.mypy"]
 # ────────────────────────────────────────────────────────────────
 # Ignore all files under imednet/examples/
 exclude = '^imednet/examples/.*$'
