--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=77", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -8,10 +8,11 @@ version = "0.1.0"
 description = "iMednet Python SDK"
 requires-python = ">=3.11"
 authors = [{name = "iMednet", email = "info@example.com"}]
-license = {text = "MIT"}
+license = {file = "LICENSE"}
 dependencies = [
-    "click>=8.1",
-    "requests>=2.0",
+    "typer>=0.12",
+    "httpx>=0.27",
+    "pydantic>=2",
 ]
 readme = "README.md"
 
@@ -24,11 +25,13 @@ tests = [
 Homepage = "https://example.com"
 
 [project.scripts]
-imednet = "imednet_py.cli:cli"
+imednet = "imednet_py.cli:app"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
-packages = ["imednet_py"]
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.setuptools.package-data]
 "imednet_py" = ["py.typed"]
