--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ license = {file = "LICENSE"}
 dependencies = [
     "typer>=0.12",
     "httpx>=0.27",
+    "requests>=2.31",
     "pydantic>=2",
 ]
 readme = "README.md"
