Fix CI lint step and add contributing instructions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
           poetry install --with dev
       - name: Lint & Type‑check
         run: |
-          poetry run ruff check .
+          poetry run ruff check --fix .
           poetry run black --check .
           poetry run mypy imednet
       - name: Unit tests
