--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ mypy = "^1.15.0"
 pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
 responses = "^0.25.7"
+respx = "^0.22.0"
+pytest-asyncio = "^0.23.5"
 pre-commit = "^4.2.0"
 types-requests = "^2.32.0.20250328"
 isort = "^6.0.1"
