--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ httpx = "^0.28.1"
 tenacity = "^9.1.2"
 python-dotenv = "^1.1.0"
 typer = {extras = ["all"], version = "^0.15.2"}
+python-json-logger = "^2.0.7"
 
 [tool.poetry.extras]
 pandas = ["pandas"]
