--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,14 @@
+[project]
+name = "imednet-sdk"
+version = "0.1.0"
+description = ""
+authors = [{name = "Frederick de Ruiter", email = "127706008+fderuiter@users.noreply.github.com"}]
+readme = "README.md"
+license = {text = "MIT"}
+
+[project.scripts]
+imednet = "imednet.cli:app"
+
 [tool.poetry]
 name = "imednet-sdk"
 version = "0.1.0"
