--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,17 @@
 [tool.poetry]
 name = "imednet-sdk"
 version = "0.1.0"
-description = ""
+description = "Python SDK for the iMedNet clinical trials API"
+readme = "README.md"
+keywords = ["imednet", "clinical trials", "sdk", "api"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.10",
+]
 authors = ["Frederick de Ruiter <127706008+fderuiter@users.noreply.github.com>"]
 packages = [{ include = "imednet" }]
 include = [
