--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ imednet = "imednet.cli:app"
 python = "^3.10"
 requests = ">=2.32.3,<3.0.0"
 pandas = { version = ">=2.2.3,<3.0.0", optional = true }
+pyarrow = { version = ">=16.0.0,<17.0.0", optional = true }
+SQLAlchemy = { version = ">=2.0.0,<3.0.0", optional = true }
 pydantic = "^2.11.3"
 httpx = "^0.28.1"
 tenacity = "^9.1.2"
@@ -47,6 +49,8 @@ python-json-logger = "^2.0.7"
 
 [tool.poetry.extras]
 pandas = ["pandas"]
+pyarrow = ["pyarrow"]
+sqlalchemy = ["SQLAlchemy"]
 
 [tool.poetry.group.dev.dependencies]
 pandas = ">=2.2.3,<3.0.0"
