--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,9 +44,11 @@ tenacity = "^9.1.2"
 python-dotenv = "^1.1.0"
 typer = {extras = ["all"], version = "^0.15.2"}
 python-json-logger = "^2.0.7"
+apache-airflow = { version = "^2.9.0", optional = true }
 
 [tool.poetry.extras]
 pandas = ["pandas"]
+airflow = ["apache-airflow"]
 
 [tool.poetry.group.dev.dependencies]
 pandas = ">=2.2.3,<3.0.0"
