--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,9 +44,11 @@ tenacity = "^9.1.2"
 python-dotenv = "^1.1.0"
 typer = {extras = ["all"], version = "^0.15.2"}
 python-json-logger = "^2.0.7"
+prometheus-client = {version = "^0.20.0", optional = true}
 
 [tool.poetry.extras]
 pandas = ["pandas"]
+metrics = ["prometheus-client"]
 
 [tool.poetry.group.dev.dependencies]
 pandas = ">=2.2.3,<3.0.0"
