--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,8 +91,9 @@ ignore = ["D", "ANN", "S101"]
 
 [tool.mypy]
 python_version = "3.10"
-strict = false 
+strict = false
 ignore_missing_imports = true
+plugins = ["pydantic.mypy"]
 # ────────────────────────────────────────────────────────────────
 # Ignore all files under imednet/examples/
 exclude                = '^imednet/examples/.*$'
