feat(workflows): add async study structure

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,5 +15,8 @@ repos:
     rev: v1.10.0
     hooks:
       - id: mypy
-        additional_dependencies: ["pandas-stubs", "types-requests"]
+        additional_dependencies:
+          - pandas-stubs
+          - types-requests
+          - pydantic
         args: ["--ignore-missing-imports", "--no-strict-optional"]
