--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,9 @@ isort = "^6.0.1"
 sphinx = "^6.2.0"
 sphinx-autodoc-typehints = "*"
 sphinx-rtd-theme = "^3.0.2"
+boto3 = "^1.34"
+moto = "^5.0"
+sqlalchemy = "^2.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
