build(mypy): enable strict mode and adjust config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,4 +16,4 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies: ["pandas-stubs", "types-requests", "pydantic"]
-        args: ["--ignore-missing-imports", "--no-strict-optional"]
+        args: ["--strict"]
