--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Install deps
         run: |
           poetry install --with dev
+      - name: Install pip-audit
+        run: |
+          poetry run pip install pip-audit
       - name: Security audit
         run: |
           poetry run pip-audit -s osv
