--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,8 @@ imednet = "imednet.cli:app"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-requests = ">=2.32.3,<3.0.0"
+requests = "2.32.4"
+h11 = "0.16.0"
 pandas = { version = ">=2.2.3,<3.0.0", optional = true }
 pyarrow = { version = ">=16.0.0,<17.0.0", optional = true }
 SQLAlchemy = { version = ">=2.0.0,<3.0.0", optional = true }
