--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,12 @@ jobs:
       - name: Install deps
         run: |
           poetry install --with dev
+      - name: Install pip-audit
+        run: |
+          poetry run pip install pip-audit
+      - name: Security audit
+        run: |
+          poetry run pip-audit -s osv
       - name: Format code
         run: |
           poetry run black .
