--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,8 +89,11 @@ line-length = 100
 src = ["imednet"]
 
 [tool.ruff.lint]
-select = ["E", "F", "I"]
+select = ["E", "F", "I", "N"]
 ignore = ["D", "ANN", "S101"]
+
+[tool.ruff.lint.pep8-naming]
+classmethod-decorators = ["field_validator", "model_validator"]
 
 [tool.mypy]
 python_version = "3.10"
