--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ h11 = "0.16.0"
 pandas = { version = ">=2.2.3,<3.0.0", optional = true }
 pyarrow = { version = ">=16.0.0,<17.0.0", optional = true }
 SQLAlchemy = { version = ">=2.0.0,<3.0.0", optional = true }
+openpyxl = { version = "^3.1", optional = true }
 pydantic = "^2.11.3"
 httpx = "^0.28.1"
 tenacity = "^9.1.2"
@@ -49,6 +50,7 @@ python-json-logger = "^2.0.7"
 
 [tool.poetry.extras]
 pandas = ["pandas"]
+excel = ["pandas", "openpyxl"]
 pyarrow = ["pyarrow"]
 sqlalchemy = ["SQLAlchemy"]
 airflow = ["apache-airflow", "apache-airflow-providers-amazon"]
@@ -72,6 +74,7 @@ sphinx-rtd-theme = "^3.0.2"
 boto3 = "^1.34"
 moto = "^5.0"
 sqlalchemy = "^2.0"
+openpyxl = "^3.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
