--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ boto3 = "^1.34"
 moto = "^5.0"
 sqlalchemy = "^2.0"
 openpyxl = "^3.1"
+sphinxcontrib-mermaid = "^0.9.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
