feat(testing): add faker utilities

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ pytest-cov = "^6.1.1"
 responses = "^0.25.7"
 respx = "^0.22.0"
 pytest-asyncio = "^0.23.5"
+faker = "^24.9"
 pre-commit = "^4.2.0"
 types-requests = "^2.32.0.20250328"
 isort = "^6.0.1"
