--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "imednet-sdk"
+name = "imednet"
 version = "0.1.0"
 description = ""
 authors = [{name = "Frederick de Ruiter", email = "127706008+fderuiter@users.noreply.github.com"}]
@@ -10,7 +10,7 @@ license = {text = "MIT"}
 imednet = "imednet.cli:app"
 
 [tool.poetry]
-name = "imednet-sdk"
+name = "imednet"
 version = "0.1.0"
 description = "Official Python client for the iMedNet clinical trials API"
 readme = "README.md"
