--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "imednet-sdk"
+name = "imednet"
 version = "0.1.0"
 description = ""
 authors = [{name = "Frederick de Ruiter", email = "127706008+fderuiter@users.noreply.github.com"}]
@@ -10,7 +10,7 @@ license = {text = "MIT"}
 imednet = "imednet.cli:app"
 
 [tool.poetry]
-name = "imednet-sdk"
+name = "imednet"
 version = "0.1.0"
 description = "Official Python client for the iMedNet clinical trials API"
 readme = "README.md"
@@ -38,8 +38,8 @@ include = [
     { path = "examples", format = "sdist" } # Include examples only in sdist
 ]
 license = "MIT"
-repository = "https://github.com/Bright-Research/imednet-python-sdk"
-homepage = "https://github.com/Bright-Research/imednet-python-sdk"
+repository = "https://github.com/fderuiter/imednet-python-sdk"
+homepage = "https://github.com/fderuiter/imednet-python-sdk"
 
 [tool.poetry.scripts]
 imednet = "imednet.cli:app"
