feat: add paged endpoint mixin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,6 +104,7 @@ target-version = ["py310"]
 [tool.ruff]
 line-length = 100
 src = ["imednet"]
+extend-exclude = ["docs/**"]
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "N"]
