--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,12 +4,14 @@ repos:
     hooks:
       - id: black
         args: ["--line-length=100", "--skip-string-normalization"]
+        language_version: python3
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.4.2
     hooks:
       - id: ruff
         args: ["--ignore=E501,F401"]
+        language_version: python3
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.10.0
@@ -17,3 +19,4 @@ repos:
       - id: mypy
         additional_dependencies: ["pandas-stubs", "types-requests", "pydantic"]
         args: ["--ignore-missing-imports", "--no-strict-optional"]
+        language_version: python3
