--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,6 +112,14 @@ ignore = ["D", "ANN", "S101"]
 [tool.ruff.lint.pep8-naming]
 classmethod-decorators = ["field_validator", "model_validator"]
 
+[tool.isort]
+profile = "black"
+line_length = 100
+known_first_party = ["imednet"]
+src_paths = ["imednet", "tests"]
+force_sort_within_sections = true
+combine_as_imports = true
+
 [tool.mypy]
 python_version = "3.10"
 strict = false
