--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,7 +103,10 @@ target-version = ["py310"]
 
 [tool.ruff]
 line-length = 100
-src = ["imednet"]
+src = ["imednet", "tests"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["imednet"]
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "N"]
@@ -117,8 +120,6 @@ profile = "black"
 line_length = 100
 known_first_party = ["imednet"]
 src_paths = ["imednet", "tests"]
-force_sort_within_sections = true
-combine_as_imports = true
 
 [tool.mypy]
 python_version = "3.10"
