fix: expand Panel example to capture all SDK methods

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,4 +22,6 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies: ["pandas-stubs", "types-requests", "pydantic"]
-        args: ["--ignore-missing-imports", "--no-strict-optional"]
+        args:
+          ["--config-file", "pyproject.toml", "--exclude", "examples/", "--ignore-missing-imports", "--no-strict-optional"]
+        files: ^(imednet|tests)/
