--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,6 +91,7 @@ openpyxl = "^3.1"
 sphinxcontrib-mermaid = "^0.9.2"
 doc8 = "^2.0.0"
 codespell = "^2.4.1"
+panel = "^1.7.3"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
