ci: restrict smoke workflow to owner

--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -4,11 +4,10 @@ name: Smoke
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 0 * * *"
 
 jobs:
   smoke:
+    if: github.actor == github.repository_owner
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
