--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,42 +1,50 @@
 name: Build and Deploy Documentation
 
-permissions:
-  contents: write
-  pages: write
-  id-token: write
-
 on:
   push:
     branches: [ main ]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: pages
+  cancel-in-progress: false
 
 jobs:
-  docs:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
-
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2
         with:
           poetry-version: '1.8.0'
-
       - name: Install dependencies
-        run: |
-          poetry install --with dev
-
+        run: poetry install --with dev
       - name: Build HTML documentation
-        run: |
-          poetry run sphinx-build -b html docs docs/_build/html
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        run: poetry run sphinx-build -b html docs docs/_build/html
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/_build/html
-          publish_branch: gh-pages
+          path: docs/_build/html
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
